JBTM-3755 Support for passing participant data to LRA callbacks